fix align text das tabelas

--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -66,7 +66,7 @@ table thead th:last-child {
 /* Corpo da tabela */
 table tbody td {
     padding: .5rem;
-    text-align: left;
+    text-align: center;
     font-size: 1rem;
     color: #333;
     border-bottom: 1px solid #eee;
